🧼 - Fix clipping jank on true terrors section

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -77,7 +77,7 @@
       transform-origin: 0 100%;
       white-space: nowrap;
       text-transform: uppercase;
-      clip-path: polygon(0% -2%, 100% -2%, 100% 102%, 0% 102%);
+      clip-path: polygon(0% -2%, 104% -2%, 104% 102%, 0% 102%);
 
       @include screen(sm) {
         font-size: 40vw;
